err/multi-mechanize.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/multi_mechanize-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/multimechanize'...
Compiling './lib/python3.5/site-packages/multimechanize/core.py'...
***   File "./lib/python3.5/site-packages/multimechanize/core.py", line 86
    except NameError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/multimechanize/dependency_checker.py'...
***   File "./lib/python3.5/site-packages/multimechanize/dependency_checker.py", line 17
    print 'sorry, no py3k support yet'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/multimechanize/graph.py'...
***   File "./lib/python3.5/site-packages/multimechanize/graph.py", line 17
    print 'ERROR: can not import Matplotlib. install Matplotlib to generate graphs'
                                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/multimechanize/results.py'...
***   File "./lib/python3.5/site-packages/multimechanize/results.py", line 23
    print 'transactions: %i' % results.total_transactions
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/multimechanize/resultsloader.py'...
***   File "./lib/python3.5/site-packages/multimechanize/resultsloader.py", line 22
    print "(optional: please install sqlalchemy to enable db logging)"
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/multimechanize/resultswriter.py'...
***   File "./lib/python3.5/site-packages/multimechanize/resultswriter.py", line 28
    os.makedirs(self.output_dir, 0755)
                                    ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/multimechanize/rpcserver.py'...
***   File "./lib/python3.5/site-packages/multimechanize/rpcserver.py", line 20
    print '\nMulti-Mechanize: %s listening on port %i' % (bind_addr, port)
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/multimechanize/utilities'...
Compiling './lib/python3.5/site-packages/multimechanize/utilities/run.py'...
***   File "./lib/python3.5/site-packages/multimechanize/utilities/run.py", line 98
    print '\n  user_groups:  %i' % len(user_groups)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
